Change of language from Danish to English.
Most of the changes have been made with automated translation.

--- a/code/Ekstra Python 1b - Strings, list, dictionaries og loops.ipynb
+++ b/code/Ekstra Python 1b - Strings, list, dictionaries og loops.ipynb
@@ -5,14 +5,14 @@
    "id": "0d91c106",
    "metadata": {},
    "source": [
-    "I denne notebook henter vi to bøger fra Gutenberg.org og gemmer dem på vores computer.\n",
+    "In this notebook we download two books from Gutenberg.org and save them to our computer.\n",
     "\n",
-    "Undervejs bruger vi strenge, lister og tilhørende indbyggende metoder, samt loops."
+    "Along the way, we use strings, lists and associated built-in methods, as well as loops."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "7ee85e0c",
    "metadata": {},
    "outputs": [],
@@ -25,53 +25,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "e2f71bc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hc andersen eventyr\n",
+    "# hc andersens fairy tales\n",
     "url = 'https://gutenberg.org/cache/epub/1597/pg1597.txt'\n",
     "raw_text_hca = urllib.request.urlopen(url).read().decode()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "1a984998",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#find starten\n",
+    "# find the start\n",
     "start = raw_text_hca.find(\"ANDERSEN'S FAIRY TALES\") + len(\"ANDERSEN'S FAIRY TALES\")\n",
-    "# find slutningen\n",
-    "end = raw_text_hca.find('*****')\n",
-    "# find det der imellem\n",
+    "\n",
+    "# find end\n",
+    "end = raw_text_hca.find(\"End of Project Gutenberg's Andersen's Fairy Tales, by Hans Christian Andersen\")\n",
+    "\n",
+    "# find what is between start and end\n",
     "content = raw_text_hca[start:end]\n",
     "\n",
-    "#opdel på hvert eventyr \n",
-    "tales = content.split('\\r\\n\\r\\n\\r\\n\\r\\n\\r\\n') # split før overskrift på titel\n",
-    "# Filtrer to første item væk, fordi de er ikke relevante\n",
+    "# Split on every fairy tale \n",
+    "tales = content.split('\\r\\n\\r\\n\\r\\n\\r\\n\\r\\n') # split before title headline\n",
+    "\n",
+    "# Filter the two first items away; they are not relevant\n",
     "tales = tales[2:-1] \n",
     "\n",
     "titles = []\n",
     "for i in tales:\n",
-    "    split_text = i.split('\\r\\n\\r') # split efter titel\n",
-    "    title = split_text[0] # gem første del af splittet - det er titlen  \n",
-    "    titles.append(title) # tilføj titlen til den tomme liste\n",
+    "    split_text = i.split('\\r\\n\\r') # split after title\n",
+    "    title = split_text[0] # Save first part of the split - that is the title  \n",
+    "    titles.append(title) # add the title to the empty list\n",
     "\n",
-    "# zip titles og tales (sidste element i titles er ikke relevant)   \n",
+    "# zip titles and tales (last element in titles is not relevant)   \n",
     "zip_format = list(zip(titles[:-1], tales))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "16aba751",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sti til mappen med tekster\n",
+    "# path to directory with texts\n",
     "output_folder = Path.cwd() / '../data/txt_files/hca'"
    ]
   },
@@ -82,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gem filerne i mappen\n",
+    "# Save the files in the folder\n",
     "for i in zip_format:\n",
     "    file_name = i[0] + '.txt'\n",
     "    with open (output_folder / file_name , 'w', encoding='utf-8') as f:\n",
@@ -91,64 +94,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "id": "92242ac2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grimms eventyr\n",
+    "# grimms fairy tales\n",
     "url = 'https://www.gutenberg.org/files/2591/2591-0.txt'\n",
     "raw_text_grimm = urllib.request.urlopen(url).read().decode()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "id": "39439164",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#find starten\n",
+    "#find the start \n",
     "start = raw_text_grimm.find('THE BROTHERS GRIMM FAIRY TALES') + len('THE BROTHERS GRIMM FAIRY TALES')\n",
-    "# find slutningen\n",
+    "\n",
+    "# find the end\n",
     "end = raw_text_grimm.find('*****')\n",
-    "# find det der imellem\n",
+    "\n",
+    "# find what is between\n",
     "content = raw_text_grimm[start:end]\n",
     "\n",
-    "#opdel på hvert eventyr \n",
+    "# split on every fairy tale \n",
     "tales = content.split('\\r\\n\\r\\n\\r\\n\\r\\n\\r\\n') # split før overskrift på titel\n",
-    "# Filtrer første item væk, fordi det er tomt\n",
+    "# Filter away the first item, as it is empty\n",
     "tales = tales[1:] \n",
     "\n",
     "titles = []\n",
     "for i in tales:\n",
-    "    split_text = i.split('\\r\\n\\r\\n\\r\\n') # split efter titel\n",
-    "    title = split_text[0] # gem første del af splittet - det er titlen  \n",
-    "    titles.append(title) # tilføj titlen til den tomme liste\n",
+    "    split_text = i.split('\\r\\n\\r\\n\\r\\n') # split after title\n",
+    "    title = split_text[0] # save first part of the split - that is the title  \n",
+    "    titles.append(title) # append the title to the empty list\n",
     "\n",
-    "# zip titles og tales    \n",
+    "# zip titles and tales    \n",
     "zip_format = list(zip(titles, tales))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "ed42fd87",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sti til mappen med tekster\n",
+    "# path to folder with texts\n",
     "output_folder = Path.cwd() / '../data/txt_files/grimm'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "a415d77d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gem filerne i mappen\n",
+    "# Store the files in the folder\n",
     "for i in zip_format:\n",
     "    file_name = i[0] + '.txt'\n",
     "    with open (output_folder / file_name , 'w', encoding='utf-8') as f:\n",
@@ -180,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
