titles is changed from da to en and request is now being used in the Python 1b script

--- a/code/Extra Python 2 - Dataanalysis with Pandas.ipynb
+++ b/code/Extra Python 2 - Dataanalysis with Pandas.ipynb
@@ -6,12 +6,6 @@
    "metadata": {},
    "source": [
     "# Pandas \n",
-    "**DA:**\n",
-    "Formålet er at øge kendskabet til pandas dataframes og nogle praktiske metoder. Pandas er et 'must', hvis man bruger Python til at arbejde data, som er systematiseret og struktureret i rækker og kolonner.\n",
-    "\n",
-    "Vi har nogle to mapper med eventyr, og vi arbejder hen imod at på teksterne samlet i en dataframe. Når vi har samlet teksterne der vil vi begynde at undersøge dem.\n",
-    "\n",
-    "**EN:**\n",
     "The purpose is to increase awareness of pandas dataframes and some practical methods. Pandas is a 'must' if you use Python to work with data that is organized and structured in rows and columns.\n",
     "\n",
     "We have two folders with tales, and we are working towards putting the texts together into a dataframe. Once we have assembled the texts, we will start examining them."
@@ -19,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3ba04f66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importer bibliotekerne\n",
+    "# import the libraries\n",
     "import os\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
@@ -41,19 +35,19 @@
    "id": "e9253aab",
    "metadata": {},
    "source": [
-    "## Definer stien til mappen med Grimms eventyr\n",
+    "## Definer the path to the folder with Grimms fairy tales\n",
     "\n",
     "Define the path to the folder with Grimms' fairy tales.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a0265de6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sti til mappen med Grimms eventyr\n",
+    "# Folder path\n",
     "text_folder = Path.cwd() / '../data/txt_files/grimm'\n",
     "text_files = os.listdir(text_folder)"
    ]
@@ -63,14 +57,14 @@
    "id": "0dabd44f",
    "metadata": {},
    "source": [
-    "## Gem titlerne i en liste \n",
+    "## Save the titles in a list\n",
     "\n",
     "Save the titles in a list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a8821177",
    "metadata": {},
    "outputs": [
@@ -78,8 +72,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total antal titler : 62.\n",
-      "Titlerne er: \n",
+      "Total amount of titles : 62.\n",
+      "The titles are: \n",
       "['ASHPUTTEL', 'BRIAR ROSE', 'CAT AND MOUSE IN PARTNERSHIP', 'CAT-SKIN', 'CLEVER ELSIE', 'CLEVER GRETEL', 'CLEVER HANS', 'DOCTOR KNOWALL', 'FREDERICK AND CATHERINE', 'FUNDEVOGEL', 'HANS IN LUCK', 'HANSEL AND GRETEL', 'IRON HANS', 'JORINDA AND JORINDEL', 'KING GRISLY-BEARD', 'LILY AND THE LION', 'LITTLE RED-CAP [LITTLE RED RIDING HOOD]', 'MOTHER HOLLE', 'OLD SULTAN', 'RAPUNZEL', 'RUMPELSTILTSKIN', 'SNOW-WHITE AND ROSE-RED', 'SNOWDROP', 'SWEETHEART ROLAND', 'THE ADVENTURES OF CHANTICLEER AND PARTLET', 'THE BLUE LIGHT', 'THE DOG AND THE SPARROW', 'THE ELVES AND THE SHOEMAKER', 'THE FISHERMAN AND HIS WIFE', 'THE FOUR CLEVER BROTHERS', 'THE FOX AND THE CAT', 'THE FOX AND THE HORSE', 'THE FROG-PRINCE', 'THE GOLDEN BIRD', 'THE GOLDEN GOOSE', 'THE GOOSE-GIRL', 'THE JUNIPER-TREE', 'THE KING OF THE GOLDEN MOUNTAIN', 'THE LITTLE PEASANT', 'THE MISER IN THE BUSH', 'THE MOUSE, THE BIRD, AND THE SAUSAGE', 'THE OLD MAN AND HIS GRANDSON', 'THE PINK', 'THE QUEEN BEE', 'THE RAVEN', 'THE ROBBER BRIDEGROOM', 'THE SALAD', 'THE SEVEN RAVENS', 'THE STORY OF THE YOUTH WHO WENT FORTH TO LEARN WHAT FEAR WAS', 'THE STRAW, THE COAL, AND THE BEAN', 'THE THREE LANGUAGES', 'THE TRAVELLING MUSICIANS', 'THE TURNIP', 'THE TWELVE DANCING PRINCESSES', 'THE TWELVE HUNTSMEN', 'THE VALIANT LITTLE TAILOR', 'THE WATER OF LIFE', 'THE WEDDING OF MRS FOX', 'THE WHITE SNAKE', 'THE WILLOW-WREN AND THE BEAR', 'THE WOLF AND THE SEVEN LITTLE KIDS', 'TOM THUMB']\n"
      ]
     }
@@ -90,7 +84,7 @@
     "    title = str(i[:-4])\n",
     "    titles.append(title)\n",
     "\n",
-    "print (f'Total antal titler : {len(titles)}.\\nTitlerne er: \\n{titles}')"
+    "print (f'Total amount of titles : {len(titles)}.\\nThe titles are: \\n{titles}')"
    ]
   },
   {
@@ -98,14 +92,12 @@
    "id": "40c15b37",
    "metadata": {},
    "source": [
-    "## Åbn tekstern og gem dem i en liste\n",
-    "\n",
-    "Open the texts and save them i a list."
+    "## Open the texts and save them i a list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3b598a29",
    "metadata": {},
    "outputs": [],
@@ -122,14 +114,12 @@
    "id": "464257cb",
    "metadata": {},
    "source": [
-    "## Gem data i en dataframe\n",
-    "\n",
-    "Store data in a dataframe."
+    "## Store data in a dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a9a78e24",
    "metadata": {},
    "outputs": [
@@ -261,7 +251,7 @@
        "[62 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,18 +269,14 @@
    "id": "27f7d184",
    "metadata": {},
    "source": [
-    "## Byg funktion af koden ovenfor og lav en dataframe med HCA's eventyr\n",
+    "## Build a function from the code above and create a dataframe with HCA's fairy tales\n",
     "\n",
-    "Vi samler de forskellige kodestykker, som du har skrevet ovenfor. Vi samler den i en celle og bruger dem til at bygge en funktion, som kan bygge emn dataframe fra en mappe med tekster.  \n",
-    "\n",
-    "\n",
-    "Build a function from the code above and create a dataframe with HCA's fairy tales¶\n",
     "We're gathering the various code snippets you've written above. We'll collect them into a cell and use them to build a function that can construct a DataFrame from a folder of texts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4562dbf8",
    "metadata": {},
    "outputs": [
@@ -467,7 +453,7 @@
        "16  THE SWINEHERD\\n\\n\\n\\nThere was once a poor Pri...    hca  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5baa6182",
    "metadata": {},
    "outputs": [
@@ -645,7 +631,7 @@
        "[79 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "1bd726e0",
    "metadata": {},
    "outputs": [
@@ -801,7 +787,7 @@
        "[65 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,14 +805,8 @@
    "id": "a0d46c56",
    "metadata": {},
    "source": [
-    "## Metoder i Pandas\n",
-    "Vi vil gerne undersøge, hvordan de forskellige eventyr adskiller sig fra hinanden i brugen af dyr. Sådan en undersøgelse kunne f.eks. inkludere, en undersøgelse af antallet af gange dyr bliver nævnt i eventyrene. Når vi beregner det, så skal vi gøre brug af forskellige pandas metoder, men vi skal også huske på at eventyrene ikke er lige lange, så hvis vi blot sammentæller antallet af gange, dyr bliver nævnt i de respektive eventyr, så vil det blive svært at sammenligne resultaterne. Løsningen er at normalisere resultaterne ved at dividere antallet af gange et dyr optræder (hits) med antal af ord (total).\n",
+    "## Methods in Pandas\n",
     "\n",
-    "Det vil ofte være det letteste at begynde med at bygge noget simpelt og hverefter omdanne konden til en funktion, som kan klare flere opgaver på samme tid. Vi begynder med at bygge noget, som kan undersøge en forekomst af et enkelt dyr og arbejder videre derfra.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Methods in Pandas\n",
     "We would like to examine how different fairy tales differ in their use of animals. Such an analysis could, for example, include an investigation into the number of times animals are mentioned in the tales. When calculating this, we will need to use various pandas methods, but we should also keep in mind that the tales are not of equal length. So, if we simply count the number of times animals are mentioned in the respective tales, it would be difficult to compare the results. The solution is to normalize the results by dividing the number of times an animal appears (hits) by the total number of words.\n",
     "\n",
     "It is often easiest to start by building something simple and then transform the code into a function that can handle multiple tasks at once. We'll begin by building something that can investigate a single animal occurrence and proceed from there."
@@ -834,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "a3d35dc5",
    "metadata": {},
    "outputs": [
@@ -851,7 +831,7 @@
        "10.795694728969533"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,13 +841,13 @@
     "\n",
     "data_frame = df.copy()\n",
     "\n",
-    "# Antal af ord / sum of words\n",
+    "# Number of words / sum of words\n",
     "hits = data_frame['text'].str.count(search_term).sum()\n",
     " \n",
-    "# Det totale antal af ord / words in total\n",
+    "# The total number of words / words in total\n",
     "total = data_frame['text'].str.split().str.len().sum()\n",
     "\n",
-    "# Den relative frekvens beregning / the relative frequency\n",
+    "# The relative frequency\n",
     "rf = hits / total * 10000\n",
     "\n",
     "print(rf)\n",
@@ -875,7 +855,7 @@
     "\n",
     "\n",
     "\n",
-    "### Ombygget til en funktion // Rebuild into a function ### \n",
+    "### Rebuild into a function ### \n",
     "\n",
     "def rel_freq(data_frame, column_name, search_term):\n",
     "    hits1 = data_frame[column_name].str.count(search_term).sum()\n",
@@ -884,7 +864,7 @@
     "    return rf1\n",
     "\n",
     "\n",
-    "## Test funktionen / test the function\n",
+    "## Test the function\n",
     "\n",
     "rel_freq(df, 'text', 'bird')"
    ]
@@ -894,18 +874,13 @@
    "id": "d9858264",
    "metadata": {},
    "source": [
-    "# Afprøv funktion med en liste af dyr\n",
-    "Vi har en funktion, der kan tage en dataframe, et kolonnenavn og et dyr og returnere en relativ frekvens. Det er relativ omkostningsfrit at udvide undersøgelse til at inkludere en længere dyrenavnsliste med dyrenavnene i ental og flertal. Listen kan vi løbe igennem med et loop og vi kan vha. funktionen få returneret relative frekvenser.\n",
-    "\n",
-    "\n",
-    "Test the function with a list of animals\n",
-    "\n",
+    "# Test the function with a list of animals\n",
     "We have a function that can take a dataframe, a column name, and an animal and return a relative frequency. It is relatively straightforward to expand the analysis to include a longer list of animal names in both singular and plural forms. We can iterate through the list using a loop and use the function to return relative frequencies."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "10b6f619",
    "metadata": {},
    "outputs": [
@@ -1000,19 +975,8 @@
    "id": "0b9790ca",
    "metadata": {},
    "source": [
-    "## Databehandling med .apply() og .iterrows() metoderne\n",
+    "## Data processing with the .apply() and .iterrows() methods\n",
     "\n",
-    "Vi vil gerrne analysere eventyrernes dyrekontekster yderligere. For at få et overblik over de relevante konteksters splitter vi først teksterne op i sætninger. Dernæst søger vi efter de sætninger, hvor der indgår et dyrenavn, og til sidst printer vi de relevante sætninger.\n",
-    "\n",
-    "Når vi gør det, får vi brug for metoderne .apply() og .iterrows().\n",
-    "\n",
-    "Vi begynder med .apply() som vi altid bruger sammen med en funktion.\n",
-    "\n",
-    "Funktionen skriver vi først og herefter applicerer vi den. \n",
-    "\n",
-    "\n",
-    "\n",
-    "Data processing with the .apply() and .iterrows() methods\n",
     "We want to further analyze the animal contexts within the fairy tales. To get an overview of the relevant contexts, we first break down the texts into sentences. Then, we search for sentences that contain an animal name, and finally, we print the relevant sentences.\n",
     "\n",
     "To do this, we will need the .apply() and .iterrows() methods.\n",
@@ -1024,32 +988,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "871b0b3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dette er en funktion kaldet 'split_text'. \n",
-    "# Den tager en tekst som input og opdeler den i afsnit ved hjælp af punktum som afgrænsning.\n",
-    "\n",
     "# This is a function called 'split_text' \n",
     "# It takes a text as input and splits it into paragraphs using periods as the delimiter.\n",
     "\n",
     "\n",
     "\n",
     "def split_text(row):\n",
-    "    paragraphs = row.split('.')  # / splitter på punktum /  Split the text into paragraphs using periods as separators.\n",
-    "    return paragraphs  # Sender en liste af sætninger retur / Return the list of paragraphs.\n",
+    "    paragraphs = row.split('.')  #  Split the text into paragraphs using periods as separators.\n",
+    "    return paragraphs  # Return the list of paragraphs.\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "# Denne linje anvender 'split_text'-funktionen på hver række i 'text'-kolonnen i dataframen'df'.\n",
-    "# Det opretter en ny kolonne kaldet 'paragraph' til at gemme den segmenterede tekst.\n",
-    "\n",
-    "# This line applies the 'segmenter' function to each row in the 'text' column of the DataFramen 'df'.\n",
+    "# This line applies the split_text function to each row in the 'text' column of the DataFramen 'df'.\n",
     "# It creates a new column called 'paragraphs' to store the segmented text.\n",
-    "\n",
     "\n",
     "\n",
     "df['paragraphs'] = df['text'].apply(lambda row: split_text(row))"
@@ -1057,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "cc3f5dd8",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1169,7 @@
        "[79 rows x 4 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "8564fd8e",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1293,6 @@
     }
    ],
    "source": [
-    "# Funktionen nedenfor tager en dataframe og et søgeord som input. /\n",
     "# This is a function called 'get_paragraphs' that takes a DataFrame and a search term as input.\n",
     "import re\n",
     "\n",
@@ -1354,21 +1308,21 @@
     "    \n",
     "\n",
     "def get_paragraphs(data_frame, search_term):\n",
-    "    # gennemløber rækkerne med .iterrows() / Iterate over rows using iterrows()\n",
+    "    # Iterate over rows using iterrows()\n",
     "    for index, row in data_frame.iterrows():\n",
     "        for p in row['paragraphs']:\n",
-    "            # # undersøger om søgeordet er i listen af paragraffer / Check if the search term exists in the current paragraph\n",
+    "            # Check if the search term exists in the current paragraph\n",
     "            if search_term in p:\n",
-    "                # Gemmer forfatter og titel / Retrieve author and title information from the current row\n",
+    "                # Retrieve author and title information from the current row\n",
     "                au = row['author']\n",
     "                ti = row['title']\n",
     "                # Print a separator line\n",
     "                print('*' * 20)\n",
-    "                # # Skriver hvor søgeordet er blevet fundet / Print a message indicating where the search term was found\n",
+    "                # # Print a message indicating where the search term was found\n",
     "                print(f'In {au.upper()} fairy tale {ti}, the word {search_term.upper()} is in this paragraph:\\n {p}')\n",
     "                print('\\n')\n",
     "\n",
-    "# Kør funktionen / Call the 'get_paragraphs' function with the DataFrame 'df' and the search term 'nightingale'\n",
+    "# Call the 'get_paragraphs' function with the DataFrame 'df' and the search term 'nightingale'\n",
     "get_paragraphs(df, 'nightingale') "
    ]
   },
@@ -1382,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "82280638",
    "metadata": {},
    "outputs": [],
@@ -1390,21 +1344,21 @@
     "import re\n",
     "def calculate_ttr(text):\n",
     "    \n",
-    "    # Tranform teksten til lower case \n",
+    "    # Tranform the text to lower case \n",
     "    text = text.lower()\n",
     "    \n",
     "    text = text.replace('-', ' ')\n",
     "    \n",
-    "    # Byg ordlister \n",
+    "    # Build word lists\n",
     "    words = re.findall(r'\\b\\S+\\b', text)\n",
     "\n",
-    "    # Beregn total antal af enheder (ord)\n",
+    "    # Calculate the total amount of words\n",
     "    total_tokens = len(words)\n",
     "\n",
-    "    # Beregn antal af unikke typer (unikke ord).\n",
+    "    # Calæculate the amount of unique types (unique words)\n",
     "    unique_types = len(set(words))\n",
     "\n",
-    "    # Beregn TTR (Type-Token Ratio) - forholdet mellem totale antal ord og unikke ord \n",
+    "    # Calculate TTR (Type-Token Ratio) - the ratio between the total amount of words and unique words  \n",
     "    ttr = unique_types / total_tokens\n",
     "\n",
     "    return ttr"
@@ -1412,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "d7e42cdd",
    "metadata": {},
    "outputs": [],
@@ -1430,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "ddf463ad",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1397,7 @@
        "Name: TTR, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,10 +1412,7 @@
    "id": "843d80bf",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Subset Variables - columns\n",
-    "# Value_counts"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1488,7 +1439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
