--- a/code/Extra Python 1b - Strings, list, dictionaries og loops.ipynb
+++ b/code/Extra Python 1b - Strings, list, dictionaries og loops.ipynb
@@ -7,20 +7,29 @@
    "source": [
     "In this notebook we download two books from Gutenberg.org and save them to our computer.\n",
     "\n",
+    "1. [Andersen's Fairy Tales](https://gutenberg.org/ebooks/1597)\n",
+    "2. [Grimms' Fairy Tales](https://gutenberg.org/ebooks/2591)\n",
+    "\n",
     "Along the way, we use strings, lists and associated built-in methods, as well as loops."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7ee85e0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib.request\n",
-    "import re\n",
-    "import os\n",
-    "from pathlib import Path"
+    "# Import Request - read more on https://requests.readthedocs.io/en/latest/user/quickstart/\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59434ba-9d1f-4d29-9fb6-27a86a5967ec",
+   "metadata": {},
+   "source": [
+    "# Get HC Andersens fairy tales"
    ]
   },
   {
@@ -31,13 +40,14 @@
    "outputs": [],
    "source": [
     "# hc andersens fairy tales\n",
-    "url = 'https://gutenberg.org/cache/epub/1597/pg1597.txt'\n",
-    "raw_text_hca = urllib.request.urlopen(url).read().decode()"
+    "response = requests.get('https://gutenberg.org/cache/epub/1597/pg1597.txt')\n",
+    "# read response\n",
+    "raw_text_hca = response.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1a984998",
    "metadata": {},
    "outputs": [],
@@ -54,8 +64,8 @@
     "# Split on every fairy tale \n",
     "tales = content.split('\\r\\n\\r\\n\\r\\n\\r\\n\\r\\n') # split before title headline\n",
     "\n",
-    "# Filter the two first items away; they are not relevant\n",
-    "tales = tales[2:-1] \n",
+    "# Filter the three first items away; they are not relevant\n",
+    "tales = tales[3:-1] \n",
     "\n",
     "titles = []\n",
     "for i in tales:\n",
@@ -69,18 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "16aba751",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "# path to directory with texts\n",
     "output_folder = Path.cwd() / '../data/txt_files/hca'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "4945fb71",
    "metadata": {},
    "outputs": [],
@@ -93,20 +105,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "92242ac2",
+   "cell_type": "markdown",
+   "id": "67ec076e-7a2f-43e9-a70d-0a2fa2d2a7f9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# grimms fairy tales\n",
-    "url = 'https://www.gutenberg.org/files/2591/2591-0.txt'\n",
-    "raw_text_grimm = urllib.request.urlopen(url).read().decode()"
+    "# Get Grimms' Fairy Tales"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "id": "def144e5-ccbd-4480-bb22-b6c071532d0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Request - read more on https://requests.readthedocs.io/en/latest/user/quickstart/\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "92242ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get('https://gutenberg.org/cache/epub/2591/pg2591.txt') # or 'https://www.gutenberg.org/files/2591/2591-0.txt'\n",
+    "\n",
+    "raw_text_grimm = response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "39439164",
    "metadata": {},
    "outputs": [],
@@ -137,18 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "ed42fd87",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "# path to folder with texts\n",
     "output_folder = Path.cwd() / '../data/txt_files/grimm'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "a415d77d",
    "metadata": {},
    "outputs": [],
@@ -159,14 +192,6 @@
     "    with open (output_folder / file_name , 'w', encoding='utf-8') as f:\n",
     "        f.write(i[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2800b8a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
