--- a/code/Extra Python 3 - Regular expressions.ipynb
+++ b/code/Extra Python 3 - Regular expressions.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Online RegEx tester, [regex101](https://regex101.com/), is an absolutely fantastic helpful site for learning how to use regular expressions (Regex).\n",
+    "The Online RegEx tester, [regex101](https://regex101.com/), is a helpful site for learning how to use regular expressions (Regex).\n",
     "\n",
     "[W3schools](https://www.w3schools.com/python/python_regex.asp) also has a very useful page about RegEx.\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Frankenstein;\\r\\n\\r\\nor, the Modern Prometheus\\r\\n\\r\\nby Mary Wollstonecraft (Godwin) Shelley\\r\\n\\r\\n\\r\\n CONTENTS'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text[0:100]"
    ]
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +88,7 @@
     "When you set \\b\\S+\\b, you match from, you match all \"non-space characters\" as well as underscores, but not symbols such as periods, commas, question marks.\n",
     "\n",
     "\n",
-    "## Secound way\n",
+    "## Second way\n",
     "\\w: \\w matches any alphabetic letter (uppercase and lowercase), any number, or an underscore (_).\n",
     "+: + matches the preceding character one or more times.\n",
     "\n",
@@ -108,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frankenstein or the Modern Prometheus by Mary Wollstonecraft Godwin Shelley CONTENTS Letter 1 Letter\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cleaned_text = clean_text_1(text)\n",
     "\n",
@@ -153,17 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frankenstein or the Modern Prometheus by Mary Wollstonecraft Godwin Shelley CONTENTS Letter 1 Letter\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cleaned_text = clean_text_2(text)\n",
     "\n",
@@ -201,26 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['yesterday', 'holiday', 'Monday', 'Yesterday', 'Sunday', 'Thursday', 'today', 'today', 'yesterday', 'yesterday', 'everyday']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ending = re.findall(r'\\w+day\\b', text)\n",
     "print(ending)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -230,7 +190,7 @@
     "\n",
     "In literature, comparisons are often used to illustrate points more clearly by putting pictures on what you want to describe. Comparisons also contribute to making the text more lively and interesting.\n",
     "\n",
-    "But regex makes it a manageable task to retrieve examples of comparisons in Grimm's fairy tales, because we can find text strings that follow the pattern of a typical comparison.\n",
+    "But regex makes it a manageable task to retrieve examples of comparisons, because we can find text strings that follow the pattern of a typical comparison.\n",
     "\n",
     "We can illustrate it in the following way. We look for phrases whose pattern is either as a ... or as an ....\n",
     "\n",
@@ -253,17 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['as a steady', 'as a child', 'as a most', 'as a Turk', 'as a remarkably', 'as a human', 'as a little', 'as a brother', 'as a double', 'as a halo', 'as a merchant', 'as a considerable', 'as a sense', 'as a show', 'as a fair', 'as a restorative', 'as a necessity', 'as a German', 'as a boy', 'as a promise', 'as a deformed', 'as a strong', 'as a narrow', 'as a little', 'as a dream', 'as a certain', 'as a bold', 'as a mystery', 'as a most', 'as a proof', 'as a tendency', 'as a divine', 'as a widow', 'as a servant', 'as a great', 'as a judgement', 'as a Roman', 'as a miniature', 'as a new', 'as a strange', 'as a girl', 'as a proof', 'as a dire', 'as a murderer', 'as a wretch', 'as a creature', 'as a murderess', 'as a wreck', 'as a lullaby', 'as a poor', 'as a new', 'as a little', 'as a small', 'as a lovely', 'as a lady', 'as a guide', 'as a vagabond', 'as a Turkish', 'as a Christian', 'as a boarder', 'as a distant', 'as a listener', 'as a true', 'as a luxury', 'as a fool', 'as a recompense', 'as a portrait', 'as a right', 'as a being', 'as a scene', 'as a soul', 'as a being', 'as a new', 'as a place', 'as a monotonous', 'as a reality', 'as a task', 'as a thing', 'as a place', 'as a very', 'as a hired', 'as a dream', 'as a new', 'as a presumption', 'as a momentary', 'as a criminal', 'as a torpor', 'as a shattered', 'as a mere', 'as a delusion', 'as a mockery', 'as a great', 'as a magistrate', 'as a man', 'as a beast', 'as a frenzy', 'as a nurse', 'as a task', 'as a week', 'as a southern', 'as a rock']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "comparison = re.findall(r'as\\sa\\s\\w+', cleaned_text)\n",
     "print (comparison)"
@@ -271,17 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['as a steady', 'as a child', 'as an under', 'as a most', 'as a Turk', 'as a remarkably', 'as a human', 'as a little', 'as a brother', 'as a double', 'as a halo', 'as a merchant', 'as a considerable', 'as a sense', 'as a show', 'as a fair', 'as a restorative', 'as an infant', 'as a necessity', 'as a German', 'as a boy', 'as an inferior', 'as a promise', 'as a deformed', 'as a strong', 'as a narrow', 'as an uncouth', 'as a little', 'as a dream', 'as a certain', 'as an easier', 'as a bold', 'as a mystery', 'as a most', 'as a proof', 'as a tendency', 'as a divine', 'as an odious', 'as a widow', 'as a servant', 'as a great', 'as a judgement', 'as a Roman', 'as an irresistible', 'as an historical', 'as an air', 'as a miniature', 'as a new', 'as a strange', 'as a girl', 'as a proof', 'as a dire', 'as a murderer', 'as a wretch', 'as a creature', 'as a murderess', 'as a wreck', 'as a lullaby', 'as a poor', 'as a new', 'as a little', 'as a small', 'as a lovely', 'as a lady', 'as a guide', 'as a vagabond', 'as a Turkish', 'as a Christian', 'as a boarder', 'as a distant', 'as a listener', 'as a true', 'as an excellent', 'as a luxury', 'as a fool', 'as a recompense', 'as a portrait', 'as a right', 'as a being', 'as a scene', 'as a soul', 'as a being', 'as an extreme', 'as a new', 'as a place', 'as a monotonous', 'as an insuperable', 'as a reality', 'as a task', 'as a thing', 'as a place', 'as a very', 'as a hired', 'as a dream', 'as a new', 'as a presumption', 'as a momentary', 'as an agitation', 'as a criminal', 'as a torpor', 'as a shattered', 'as a mere', 'as an event', 'as a delusion', 'as an occurrence', 'as a mockery', 'as a great', 'as a magistrate', 'as a man', 'as a beast', 'as a frenzy', 'as a nurse', 'as a task', 'as a week', 'as a southern', 'as a rock']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "comparison = re.findall(r'as\\sa\\s\\w+|as\\san\\s\\w+', cleaned_text)\n",
     "print (comparison)"
@@ -289,17 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['as a steady', 'as a child', 'as an under', 'as a most', 'as a Turk', 'as a remarkably', 'as a human', 'as a little', 'as a brother', 'as a double', 'as a halo', 'as a merchant', 'as a considerable', 'as a sense', 'as a show', 'as a fair', 'as a restorative', 'as an infant', 'as a necessity', 'as a German', 'as a boy', 'as an inferior', 'as a promise', 'as a deformed', 'as a strong', 'as a narrow', 'as an uncouth', 'as a little', 'as a dream', 'as a certain', 'as an easier', 'as a bold', 'as a mystery', 'as a most', 'as a proof', 'as a tendency', 'as a divine', 'as an odious', 'as a widow', 'as a servant', 'as a great', 'as a judgement', 'as a Roman', 'as an irresistible', 'as an historical', 'as an air', 'as a miniature', 'as a new', 'as a strange', 'as a girl', 'as a proof', 'as a dire', 'as a murderer', 'as a wretch', 'as a creature', 'as a murderess', 'as a wreck', 'as a lullaby', 'as a poor', 'as a new', 'as a little', 'as a small', 'as a lovely', 'as a lady', 'as a guide', 'as a vagabond', 'as a Turkish', 'as a Christian', 'as a boarder', 'as a distant', 'as a listener', 'as a true', 'as an excellent', 'as a luxury', 'as a fool', 'as a recompense', 'as a portrait', 'as a right', 'as a being', 'as a scene', 'as a soul', 'as a being', 'as an extreme', 'as a new', 'as a place', 'as a monotonous', 'as an insuperable', 'as a reality', 'as a task', 'as a thing', 'as a place', 'as a very', 'as a hired', 'as a dream', 'as a new', 'as a presumption', 'as a momentary', 'as an agitation', 'as a criminal', 'as a torpor', 'as a shattered', 'as a mere', 'as an event', 'as a delusion', 'as an occurrence', 'as a mockery', 'as a great', 'as a magistrate', 'as a man', 'as a beast', 'as a frenzy', 'as a nurse', 'as a task', 'as a week', 'as a southern', 'as a rock']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "comparison = re.findall(r'as\\sa[n]?\\s\\w+', cleaned_text)\n",
     "print (comparison)"
@@ -324,34 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['educated he is as silent as a Turk and a kind of ignorant carele',\n",
-       " ' cause of their ruin He was a Turkish merchant and had inhabited',\n",
-       " ' intentions in his favour The Turk amazed and delighted endeavou',\n",
-       " 'eward his toil and hazard The Turk quickly perceived the impress',\n",
-       " 'eized and made a slave by the Turks recommended by her beauty sh',\n",
-       " ' day for the execution of the Turk was fixed but on the night pr',\n",
-       " 'passing into some part of the Turkish dominions Safie resolved t',\n",
-       " 'parture before which time the Turk renewed his promise that she ',\n",
-       " 'irs of her native country The Turk allowed this intimacy to take',\n",
-       " ' He quickly arranged with the Turk that if the latter should fin',\n",
-       " ' learned that the treacherous Turk for whom he and his family en',\n",
-       " 'it but the ingratitude of the Turk and the loss of his beloved S',\n",
-       " ' mandate A few days after the Turk entered his daughter s apartm',\n",
-       " 'this emergency A residence in Turkey was abhorrent to her her re',\n",
-       " 'rstood the common language of Turkey and departed for Germany Sh']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "re.findall(r'.{30}Turk.{30}', cleaned_text)"
    ]
@@ -367,17 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Frankenstein', 'Modern', 'Prometheus', 'Mary', 'Wollstonecraft', 'Godwin', 'Shelley', 'CONTENTS', 'Letter', 'Letter', 'Letter', 'Letter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "upper_case_word = re.findall(r'[A-Z]\\w+', text)\n",
     "print (upper_case_word[:20])"
@@ -394,17 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Frankenstein', 'Prometheus', 'Mary', 'Wollstonecraft', 'Godwin', 'Shelley', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter', 'Chapter']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "true_upper_case = []\n",
     "for word in upper_case_word:\n",
